# GainTracker

./: .gitignore  Cargo.toml  GainTrackerDBDesign.mwb  README.md  alembic.ini  app.py  db.py  openapi.yaml  requirements.txt
about/about/: about2.html
api/: auth.py  authentication.py  exercise.py  general.py  progress.py  session.py  workout.py
migrations/: env.py
migrations/versions/: 2023_01_14_2056-5efb2da87a0a_added_authors_for_exercises.py  2023_01_20_1957-9eea542d9b31_ordering_exercises_in_workouts.py  3779fa0b1c6e_exercises_can_have_multiple_types.py  7767183d2063_deleted_date_from_exerciserecord.py  96b1262f2594_add_sequence_number_column_to_.py  e67a0f4397b0_enable_long_exercise_description.py  e81007140287_create_models.py
models/: BodyMeasurement.py  Exercise.py  ExerciseRecord.py  Muscle.py  Session.py  User.py  Workout.py  __init__.py
other/: GainTrackerDBDesign.mwb  GainTrackerDBDesign.mwb.bak  james_bond_account.sql  openapi.yaml  presentation_english.pptx  presentation_ukr.pptx
schemas/: Progress.py  Session.py  User.py  Workout.py  __init__.py
src/: main.rs
src/workouts/: mod.rs
static/css/: styles.css
templates/auth/: about.html  add_measurements.html  base.html  login.html  signup.html
templates/base_templates/: navbar.html
templates/exercises/: base.html  exercise_create.html  exercise_info_edit.html
templates/general/: about.html
templates/progress/: base.html  exercises.html  graph_on_search.html  measurements.html  muscles.html
templates/sessions/: base.html  session_create.html  session_info.html  session_list.html
(+31 files in other folders)
